--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -301,9 +301,9 @@ button:-moz-focusring,
    * Correct the padding in Firefox.
    */
 
-fieldset {
+/* fieldset {
     padding: 0.35em 0.75em 0.625em;
-}
+} */
 
 /**
    * 1. Correct the text wrapping in Edge and IE.
